--- a/Project1/client/package.json
+++ b/Project1/client/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^4.1.2",
     "@tailwindcss/vite": "^4.1.18",
     "graphql": "^16.12.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.12.0",
